src/test/deca/syntax/invalid/extendsempty.deca
// Description:
//    extends without class
//
// Resultats:
//    Assignment Error
//
// Historique:
//    cree le 08/01/2023

class a extends {

}
